--- a/config/database.yml
+++ b/config/database.yml
@@ -11,15 +11,17 @@ default: &default
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: postgres
+  username: postgres
+  password: 1234
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: postgres
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: postgres
