--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.1.1",
     "@hotwired/turbo-rails": "^7.2.4",
+    "@reduxjs/toolkit": "^1.8.6",
     "react": "^18.2.0",
+    "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
+    "redux": "^4.2.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
