--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.3",
     "redux": "^4.2.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
